--- a/_includes/portfolios_2.html
+++ b/_includes/portfolios_2.html
@@ -24,7 +24,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Clean native interface">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -36,7 +36,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Realtime streaming">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -48,7 +48,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Multiple cameras">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -60,7 +60,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Multiple windows">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -72,7 +72,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam//GlanceCam4_05_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - InstaZoom, Always on Top, Fullscreen and resize support">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -85,7 +85,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - GlanceGrids: flexible grids for live view">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -97,7 +97,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Standard or minimalistic UI">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -109,7 +109,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Configurable in every detail">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -121,7 +121,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_09_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_09_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Secure, stable, performant on Apple Silicon with 4K support and RTSP tweaks">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_09_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -133,7 +133,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-one">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_10_MAS.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_10_MAS.jpg" class="img-fluid" alt="GlanceCam 4 Mac App Store screenshot - Loved by Users">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_10_MAS.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -145,7 +145,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Clean native interface">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_01.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -157,7 +157,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Realtime streaming">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_02.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -169,7 +169,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Multiple cameras">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_03.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -181,19 +181,19 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Multiple windows">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_04.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
                         <h5><a href="#">GlanceCam on macOS</a></h5>
-                        <span>Screenshot 4/8/span>
+                        <span>Screenshot 4/8</span>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - GlanceGrids: flexible grids for live view">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_05.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -205,7 +205,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Standard or minimalistic UI">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_06.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -217,7 +217,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Configurable in every detail">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_07.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -229,7 +229,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-two">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08.jpg" class="img-fluid" alt="GlanceCam 4 on macOS - Full screen and Insta-zoom cool features">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCam4_08.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
@@ -241,7 +241,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30 grid-item cat-three">
                 <div class="portfolio-wrapper">
                     <div class="portfolio-thumb portfolio-popup">
-                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCamIcons.jpg" class="img-fluid" alt="">
+                        <img src="{{site.baseurl}}/assets/img/glancecam/GlanceCamIcons.jpg" class="img-fluid" alt="GlanceCam 4 offerts multiple icons">
                         <a href="{{site.baseurl}}/assets/img/glancecam/GlanceCamIcons.jpg" class="view"><i class="icofont-plus"></i></a>
                     </div>
                     <div class="portfolio-content">
